Changed bullets to yellow color; changed header, to add extra information

--- a/client/src/css/app.scss
+++ b/client/src/css/app.scss
@@ -114,6 +114,14 @@ footer{
   color: white
 }
 
+.yellow{
+  color: #f2d900;
+}
+
+.blue{
+  color: #0275d8;
+}
+
 
 @import "main-window";
 @import "call-window";
